--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,25 @@
-
+body{
+  margin: 0px;
+  overflow-x: hidden;
+}
 h1{
   padding:25px;
   font-family:fantasy;
+  height:20px;
+  overflow-y: hidden;
+  color:red;
 }
 #headline{
-  text-align:center;}
+  text-align:center;
+
+}
 nav{
   margin-bottom:50px;
+  position:sticky;
+  top:0;
+  z-index: 1;
+
+
 
 }
 
@@ -49,8 +62,14 @@ h3 {
   font-style: italic;
 }
 #header-img{
+  z-index: 100;
   display:block;
   margin:50px auto;
   width: 80vw;
-  hight: 20vh;
+  height: 30vh;
+  min-height: 200px;
+  max-height: 250px;
 }
+
+button{
+float:right;}
